@@ -1,5 +1,5 @@
 # @configure_input@
-# $Id: defs.in,v 1.5 2012-11-30 18:08:11 karl Exp $
+# $Id: defs.in,v 1.6 2012-12-02 23:12:22 karl Exp $
 # 
 # Copyright 2008, 2012 Free Software Foundation, Inc.
 #
@@ -46,6 +46,11 @@ export install_info
 top_srcdir=@top_srcdir@
 testdir=${top_srcdir}/install-info/tests
 export testdir
+
+if test -z "$TMPDIR"; then
+  TMPDIR=/tmp
+  export TMPDIR
+fi
 
 # In case someone pedantic insists on using grep -E.
 : ${EGREP=egrep}
