@@ -1,3 +1,7 @@
+2012-12-02  Karl Berry  <karl@gnu.org>
+
+	* install-info/tests/defs.in (TMPDIR): define if not defined.
+
 2012-12-02  Patrice Dumas  <pertusus@free.fr>
 
 	* configure.ac: remove gnulib module regex snippet, it is already in 
